--- a/main.bib
+++ b/main.bib
@@ -646,8 +646,40 @@ https://www.cgl.ucsf.edu/chimera/docs/UsersGuide/tutorials/pdbintro.html
 
 % biomolecular structure
 @book{zvelebil2007understanding,
-  title={Understanding bioinformatics},
-  author={Zvelebil, Marketa J and Baum, Jeremy O},
-  year={2007},
-  publisher={Garland Science}
+  title     = {Understanding bioinformatics},
+  author    = {Zvelebil, Marketa J and Baum, Jeremy O},
+  year      = {2007},
+  publisher = {Garland Science}
+}
+
+@online{vitejs,
+  author  = {{You, Evan and Vite Contributors}},
+  title   = {Vitejs documentation},
+  url     = {https://vitejs.dev/guide/why.html},
+  urldate = {2023-05-17}
+}
+
+@online{rollup,
+  author  = {{Rollup contributors}},
+  title   = {Rollup documentation},
+  url     = {https://rollupjs.org/},
+  urldate = {2023-05-17}
+}
+
+@online{npm,
+  author  = {{NPM contributors}},
+  title   = {npm documentation},
+  url     = {https://www.npmjs.com/},
+  urldate = {2023-05-17}
+}
+
+@article{hanson2010jmol,
+  title     = {Jmol--a paradigm shift in crystallographic visualization},
+  author    = {Hanson, Robert M},
+  journal   = {Journal of Applied Crystallography},
+  volume    = {43},
+  number    = {5},
+  pages     = {1250--1260},
+  year      = {2010},
+  publisher = {International Union of Crystallography}
 }
