--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -433,21 +433,19 @@ The coloring scheme used to represent the molecular structure is equally importa
   \label{fig:coloring}
 \end{figure}
 
+% * ✅
 \section{Visualization software}
 \label{section:visualization_software}
 
-% TODO: describe the web based \\
+There are many software tools available for visualizing molecular data. Some of the most popular tools include MolScript \cite{kraulis1991molscript}, PyMOL \cite{delano2002pymol}, VMD \cite{humphrey1996vmd}, and ChimeraX \cite{goddard2018ucsf}. More recently, web-based visualization tools, such as NGL Viewer \cite{rose2015ngl}, LiteMol \cite{sehnal2017litemol}, and Mol* \cite{sehnal2021molstar}, have become popular thanks to their accessibility and ease of use.
 
-There are numerous software tools available for visualizing molecular data, with varying levels of complexity, customization, and features. Some of the most popular tools include MolScript \cite{kraulis1991molscript}, PyMOL \cite{delano2002pymol}, VMD \cite{humphrey1996vmd}, and ChimeraX \cite{goddard2018ucsf}. More recently, web-based visualization tools, such as NGL Viewer \cite{rose2015ngl}, LiteMol \cite{sehnal2017litemol}, and Mol* \cite{sehnal2021molstar}, have become increasingly popular due to their accessibility and ease of use.
+The following sections will discuss the two web-based molecular visualization tools used in this work, LiteMol and Mol*.
 
-In the following sections, we will discuss the two web-based molecular visualization tools used in this work, LiteMol and Mol*, focusing on the latter.
-
+% * ✅
 \subsection{Litemol}
 \label{subsection:litemol}
 
-% TODO: explain screenshot
-
-LiteMol is an open-source tool suite for molecular data visualization. It supports various file formats and offers a user-friendly interface for creating visualizations. LiteMol provides essential visualization types, including ball and stick, surface, and cartoon representations, as well as options for customizing colors, lighting, and other display settings. The web-based nature of LiteMol makes it easily accessible and platform-independent. \cite{sehnal2017litemol}
+LiteMol is an open-source tool suite for molecular data visualization. It supports various file formats and offers a user-friendly interface for creating visualizations. LiteMol provides essential visualization types, including ball and stick, surface, and cartoon representations, as well as options for customizing colors, lighting, and other display settings. \cite{sehnal2017litemol}
 
 Figure \ref{fig:litemol} shows an example of a LiteMol visualization of the 1CBS protein structure. 
 
