--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -180,7 +180,7 @@ Figure \ref{fig:aspirin} shows the structure of aspirin \cite{pubchem_aspirin}, 
   \begin{center}
     \includegraphics[width=7cm]{figures/aspirin.png}
   \end{center}
-  \caption{Aspirin, a drug used to treat pain, fever, or inflammation.}
+  \caption{Aspirin.}{Aspirin, a drug used to treat pain, fever, or inflammation.}
   \label{fig:aspirin}
 \end{figure}
 
@@ -420,7 +420,7 @@ The coloring scheme used to represent the molecular structure is equally importa
   \subfigure[Example of α-helix and β-sheet representation.]{\label{fig:cartoon}\includegraphics[height=4.5cm]{figures/cartoon.png}}
   \subfigure[Element symbol.]{\label{fig:element_symbol}\includegraphics[height=4.5cm]{figures/ball_and_stick.png}}
   \subfigure[Chain ID.]{\label{fig:chain_id_coloring}\includegraphics[height=4.5cm]{figures/chain_id_coloring.png}}
-  \caption{Coloring of molecular structures by various color schemes.}
+  \caption{Coloring of molecular structures.}{Coloring of molecular structures by various color schemes.}
   \label{fig:coloring}
 \end{figure}
 
@@ -636,7 +636,7 @@ To establish the color for a given charge, two color interpolations are employed
   \subfigure[Ball and stick]{\label{fig:partial_charges_color_theme-bas}\includegraphics[width=0.45\textwidth]{figures/1F16-bas.png}}
   \subfigure[Surface]{\label{fig:partial_charges_color_theme-surface}\includegraphics[width=0.45\textwidth]{figures/1F16-surface.png}}
   \subfigure[Cartoon]{\label{fig:partial_charges_color_theme-cartoon}\includegraphics[width=0.45\textwidth]{figures/1F16-cartoon.png}}
-  \caption{Partial charges color theme for different visualization types.}
+  \caption{Partial charges color theme.}{Partial charges color theme for different visualization types.}
   \label{fig:partial_charges_color_theme}
 \end{figure}
 
@@ -675,7 +675,7 @@ The controls are depicted in Figure \ref{fig:controls-charge-set}.
 In addition to the partial charges extension, it was necessary to create a custom Mol* viewer plugin. By using a custom plugin, it is possible to create new behaviors which are not provided by the standard Mol* viewer. This section describes the development of the plugin and the new custom behaviors which it provides.
 
 % * ✅
-\subsection{Technologies used during development}
+\subsection{Used technologies}
 
 The Mol* viewer plugin was developed using the Vite build tool \cite{vitejs}. This build tool was a crucial aspect of the development of the plugin since it allowed for a significantly faster development cycle compared to the Webpack bundler provided by the Mol* library.
 
