citations for surface and cartoon

--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -254,7 +254,7 @@ Figure \ref{fig:psilocybin} demonstrates the unequal distribution of electron de
 
 % TODO: maybe remove the citations here?
 
-There are several applications for partial atomic charges in computational chemistry, such as molecular dynamics \cite{nejad2018insulin}, molecular docking \cite{docking}, and pharmacophore design \cite{stalke2011meaningful}. \cite{racek2022thesis,schindler2021thesis}
+There are several applications for partial atomic charges in computational chemistry, such as molecular dynamics \cite{MIAO20191049}, molecular docking \cite{docking}, and pharmacophore design \cite{stalke2011meaningful}. \cite{racek2022thesis,schindler2021thesis}
 
 It is important to note that partial charges are a theoretical concept and cannot be directly measured or observed; they can only be calculated using computational methods. \cite{schindler2019thesis} 
 
@@ -393,14 +393,14 @@ Examples of ball and stick representations are shown in Figures \ref{fig:structu
 \label{subsection:surface}
 
 Surface representations depict the three-dimensional shape of a molecule by displaying its solvent-accessible surface. This model provides a more accurate representation of the molecule's overall shape and size, making it especially useful for studying macromolecular interactions and the binding of small molecules.
-For example, surface visualization can be used to identify potential binding sites on a protein surface, which can then be targeted by drug molecules. \ref{docking}
+For example, surface visualization can be used in molecular dynamics to identify potential binding sites on a protein surface, which can then be targeted by drug molecules. \ref{MIAO20191049}
 
 Examples of surface models are shown in Figures \ref{fig:psilocybin} and \ref{fig:partial_charges_color_theme-surface}.
 
 \subsection{Cartoon}
 \label{subsection:cartoon}
 
-Cartoon representations simplify the molecular structure by focusing on the secondary structure elements of proteins and nucleic acids, such as alpha helices and beta sheets. Alpha helices are often depicted as spiral-like structures, whereas beta sheets as arrows. This type of visualization is beneficial for visualizing large macromolecular complexes, as it highlights the overall organization and topology of the molecule without the clutter of atomic details. \cite{gu2009structural,tsai2003introduction}
+Cartoon representations simplify the molecular structure by focusing on the secondary structure elements of proteins and nucleic acids, such as alpha helices and beta sheets. Alpha helices are often depicted as spiral-like structures, whereas beta sheets as arrows. This type of visualization is beneficial for visualizing large macromolecular complexes, as it highlights the overall organization and topology of the molecule without the clutter of atomic details. \cite{richardson1985schematic}
 
 Figure \ref{fig:cartoon} shows an example of an alpha helix and beta sheet of a protein. Examples of cartoon representations are shown in Figures \ref{fig:hemoglobin} and \ref{fig:partial_charges_color_theme-cartoon}.
 
