--- a/main.bib
+++ b/main.bib
@@ -683,3 +683,28 @@ https://www.cgl.ucsf.edu/chimera/docs/UsersGuide/tutorials/pdbintro.html
   year      = {2010},
   publisher = {International Union of Crystallography}
 }
+
+@article{MIAO20191049,
+  title    = {Multiscale Molecular Visualization},
+  journal  = {Journal of Molecular Biology},
+  volume   = {431},
+  number   = {6},
+  pages    = {1049-1070},
+  year     = {2019},
+  issn     = {0022-2836},
+  doi      = {https://doi.org/10.1016/j.jmb.2018.09.004},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0022283618310490},
+  author   = {Haichao Miao and Tobias Klein and David Kouřil and Peter Mindek and Karsten Schatz and M. Eduard Gröller and Barbora Kozlíková and Tobias Isenberg and Ivan Viola},
+  keywords = {molecular visualization, molecular dynamics, modelitics, DNA nanotechnology, visual abstraction},
+  abstract = {We provide a high-level survey of multiscale molecular visualization techniques, with a focus on application-domain questions, challenges, and tasks. We provide a general introduction to molecular visualization basics and describe a number of domain-specific tasks that drive this work. These tasks, in turn, serve as the general structure of the following survey. First, we discuss methods that support the visual analysis of molecular dynamics simulations. We discuss, in particular, visual abstraction and temporal aggregation. In the second part, we survey multiscale approaches that support the design, analysis, and manipulation of DNA nanostructures and related concepts for abstraction, scale transition, scale-dependent modeling, and navigation of the resulting abstraction spaces. In the third part of the survey, we showcase approaches that support interactive exploration within large structural biology assemblies up to the size of bacterial cells. We describe fundamental rendering techniques as well as approaches for element instantiation, visibility management, visual guidance, camera control, and support of depth perception. We close the survey with a brief listing of important tools that implement many of the discussed approaches and a conclusion that provides some research challenges in the field.}
+}
+
+@incollection{richardson1985schematic,
+  title     = {Schematic drawings of protein structures},
+  author    = {Richardson, Jane S},
+  booktitle = {Methods in enzymology},
+  volume    = {115},
+  pages     = {359--380},
+  year      = {1985},
+  publisher = {Elsevier}
+}
