--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -392,10 +392,9 @@ Examples of ball and stick representations are shown in Figures \ref{fig:structu
 \subsection{Surface}
 \label{subsection:surface}
 
-Surface representations depict the three-dimensional shape of a molecule by displaying its solvent-accessible surface. This model provides a more accurate representation of the molecule's overall shape and size, making it especially useful for studying macromolecular interactions and the binding of small molecules.
-For example, surface visualization can be used in molecular dynamics to identify potential binding sites on a protein surface, which can then be targeted by drug molecules. \ref{MIAO20191049}
+Surface representations depict the three-dimensional shape of a molecule by displaying its solvent-accessible surface. This model provides a more accurate representation of the molecule's overall shape and size, making it especially useful for studying macromolecular interactions and the binding of small molecules. For example, surface visualization can be used in molecular dynamics to identify potential binding sites on a protein surface, which can then be targeted by drug molecules. \cite{MIAO20191049}
 
-Examples of surface models are shown in Figures \ref{fig:psilocybin} and \ref{fig:partial_charges_color_theme-surface}.
+Figures \ref{fig:psilocybin} and \ref{fig:partial_charges_color_theme-surface} show examples of the surface representation.
 
 \subsection{Cartoon}
 \label{subsection:cartoon}
